#13 MaJ fichier restau

--- a/restau/la-note-enchantée.html
+++ b/restau/la-note-enchantée.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="header_back-home" href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a class="header_back-home" href="index2.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1 class="header_title">ohmyfood</h1>
     </header>
 
