--- a/restau/index2.html
+++ b/restau/index2.html
@@ -70,7 +70,7 @@
                 <article>
                     <a href="restau/la-palette-du-goût.html" class="card">
                         <span class="card_info">Nouveau</span>
-                        <img src="assets/images/restaurants/jay.jpg" alt="photo d'une assiette" 
+                        <img src="images/restaurants/jay.jpg" alt="photo d'une assiette" 
                         class="card_img">
                         <h3 class="card_title">La palette du goût</h3>
                         <p class="card_text">Ménilmontant</p>
@@ -84,7 +84,7 @@
                 <article>
                     <a href="restau/la-note-enchantée.html" class="card">
                         <span class="card_info">Nouveau</span>
-                        <img src="assets/images/restaurants/stil.jpg" alt="photo d'une assiette" 
+                        <img src="images/restaurants/stil.jpg" alt="photo d'une assiette" 
                         class="card_img">
                         <h3 class="card_title">La note enchantée</h3>
                         <p class="card_text">Charonne</p>
@@ -97,7 +97,7 @@
                 <!-- cards -->
                 <article>
                     <a href="restau/à-la-française.html" class="card">
-                        <img src="assets/images/restaurants/toa.jpg" alt="Photo d'une assiette" 
+                        <img src="images/restaurants/toa.jpg" alt="Photo d'une assiette" 
                         class="card_img">
                         <h3 class="card_title">À la française</h3>
                         <p class="card_text">Cité Rouge</p>
@@ -110,7 +110,7 @@
                 <!-- cards -->
                 <article>
                     <a href="restau/le-délice-des-sens.html" class="card">
-                        <img src="assets/images/restaurants/louis.jpg" alt="photo d'une assiette" 
+                        <img src="images/restaurants/louis.jpg" alt="photo d'une assiette" 
                         class="card_img">
                         <h3 class="card_title">Le délice des sens</h3>
                         <p class="card_text">Folie-Méricourt</p>
