--- a/restau/la-palette-du-goût.html
+++ b/restau/la-palette-du-goût.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset=""utf-8>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OhMyFood - La palette du goût</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="./images/logo/ohmyfood.png">
     <!-- googlefonts -->
@@ -13,11 +14,10 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <!-- icones fontawesome -->
     <script src="https://kit.fontawesome.com/54c6a0cf3f.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - La palette du goût</title>
 </head>
 <body>
     <header class="header">
-        <a class="header_back-home" href="index2.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a class="header_back-home" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1 class="header_title">ohmyfood</h1>
     </header>
 
